--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>carrot game</title>
     <link rel="stylesheet" href="style3.css">
-    <script src='main3.js' defer></script>
+    <script defer src='main3.js'></script>
     <link rel="stylesheet" 
     href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" 
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" 
@@ -31,6 +31,6 @@
             <i class="fas fa-undo-alt"></i>
         </button>
     </section>
-    
+
 </body>
 </html>
